# libibootim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libibootim.pc.in
cmake/: cmake_uninstall.cmake.in
include/: libibootim.h
src/: libibootim.c
tools/: ibootimutil.c
